# kothon

./: .gitignore  LICENSE  README.md  gen_stubs.py  kothon.py  pyproject.toml  tox.ini
.github/workflows/: python-publish.yml  tests.yml
kothon/: __init__.py  pipe.py
kothon/_utils/: type_utils.py
kothon/functions/: __init__.py  aggregation.py  sequence.py
kothon/iterable/: __init__.py  seq.py
tests/: test_kothon.py  test_pipe.py  test_seq.py
